# checkito

./: .devcontainer.json  .gitignore  .gitmodules  AGENTS.md  Cargo.toml  README.md  README.tpl  build.rs  readme.sh
.devcontainer/: devcontainer.json
.github/workflows/: test.yml
checkito/: Cargo.toml  README.md  README.tpl
checkito/examples/: any_combinator_tests.rs  cardinality_experiments.rs  char_cardinality_deep_dive.rs  cheat.rs  collection_cardinality.rs  edge_cardinality.rs  edge_empty.rs  edge_nan.rs  edge_overflow.rs  edge_panic.rs  edge_report.rs  float_cardinality_investigation.rs  json.rs  lazy_investigation.rs  math_edge_cases.rs  wrapper_cardinality.rs
checkito/issues/: 001-async-run-argument-order.md  001-async-run-color-verbose-ordering.md  002-check-macro-generate-error-setting-is-invalid.md  002-check-macro-generate-error-setting.md  003-check-attribute-non-unwinding-panic-abort.md  003-parallel-pool-worker-count-off-by-one.md  004-dead-code-warnings-state-and-utility.md  004-panic-hook-global-state-race.md  005-exhaustive-floating-distribution-quality.md  005-integration-test-check-aborts-process.md  006-dead-code-warnings-in-core-library.md  007-exhaustive-numeric-generation-not-size-biased.md  008-any-tuple-generation-duplication.md  009-sizes-from-ratio-resets-scale.md  010-check-attribute-env-vars-are-compile-time.md  011-parallel-worker-shrink-boundary.md  012-msrv-rust-version-mismatch.md  013-checkito-constant-env-default-is-compile-time.md  014-async-runner-panic-hook-not-silenced.md  015-readme-doctest-uses-test-attr-not-executed.md
checkito/src/: all.rs  any.rs  array.rs  boxed.rs  cardinality.rs  check.rs  collect.rs  convert.rs  dampen.rs  filter.rs  filter_map.rs  flatten.rs  generate.rs  keep.rs  lazy.rs  lib.rs  map.rs  parallel.rs  prelude.rs  primitive.rs  prove.rs  regex.rs  run.rs  sample.rs  shrink.rs  standard.rs  state.rs  unify.rs  utility.rs
checkito/tests/: any.rs  asynchronous.rs  boolean.rs  boxed.rs  cardinality.rs  character.rs  check.rs  check_runtime.rs  collect.rs  common.rs  constant.rs  exhaustive.rs  filter.rs  named_generators.rs  nonzero.rs  number.rs  parallel.rs  prelude.rs  regex.rs  run.rs  sample.rs  shrink.rs  string.rs
checkito_macro/: Cargo.toml
checkito_macro/src/: check.rs  constant.rs  lib.rs  regex.rs  utility.rs
examples/: cheat.rs  json.rs  simple.rs
investigation_issues/: 00-INDEX.md  01-clippy-warnings.md  02-cardinality-bug.md  03-missing-test-coverage.md  04-result-methods-docs.md  05-exhaustive-small-values-todo.md  06-any-tuple-todo.md  07-regex-safety-issues.md  08-collection-shrink-performance.md  09-macro-hygiene.md  10-standard-collections.md  11-check-macro-docs.md  12-unsafe-parallel.md  13-filter-edge-case.md  14-fuzzing-support-todo.md  15-dampen-edge-cases.md  16-shrink-documentation.md  17-lib-todos.md  README.md  create_github_issues.sh
issues/: 00-SUMMARY.md  01-char-cardinality-includes-surrogates.md  01-exhaustive-mode-small-values-first.md  01-float-weighted-selection-unreachable-panic.md  02-filter-cardinality-incorrect.md  02-float-shrinker-no-shrink-nonfinite.md  02-full-generators-not-exhaustive-compatible.md  03-any-exhaustive-infinite-loop-zero-cardinality.md  03-filter-not-exhaustive-compatible.md  03-lazy-cardinality-incorrect.md  04-any-tuple-not-exhaustive-compatible.md  04-invalid-range-cardinality.md  04-with-shrinker-misleading-cache-comment.md  05-float-cardinality-mismatch.md  05-missing-any-tuple-indexed-weighted.md  05-missing-constant-impl-for-dampen.md  06-adaptive-test-count.md  06-missing-prove-for-option.md  07-clippy-warnings-in-test-files.md  07-missing-full-generate-nonzero-types.md  08-async-shrink-budget-shared.md  08-clippy-test-attr-in-doctest-warning.md  09-flatten-cardinality-uses-static-inner.md  09-primitive-shrinker-minimality.md  10-boxed-unwrap-to-expect.md  10-fuzz-mode-incomplete-todo.md  11-boxed-unwrap-should-use-expect.md  11-lazy-cardinality-before-init.md  12-fuzzing-mode-investigation.md  12-regex-byte-class-char-conversion.md  13-integer-generator-overflow-negative-range.md  13-missing-full-generate-stdlib-types.md  14-char-range-conversion-surrogate-boundary.md  15-float-range-non-finite-bounds-panic.md  16-filter-shrinker-does-not-reapply-filter.md  17-check-engine-calls-item-twice.md  18-missing-state-documentation.md  19-all-shrink-index-documentation.md  20-any-exhaustive-duplicate-values.md  README.md
src/: all.rs  any.rs  array.rs  boxed.rs  cardinality.rs  check.rs  collect.rs  constant.rs  convenient.rs  convert.rs  dampen.rs  filter.rs  filter_map.rs  flatten.rs  function.rs  fuse.rs  generate.rs  keep.rs  lazy.rs  lib.rs  map.rs  nudge.rs  option.rs  prelude.rs  primitive.rs  prove.rs  random.rs  regex.rs  same.rs  sample.rs  shrink.rs  size.rs  standard.rs  state.rs  unify.rs  utility.rs
src/test/: boolean.rs  character.rs  mod.rs  number.rs
tests/: any.rs  attribute.rs  boolean.rs  character.rs  check.rs  common.rs  constant.rs  filter.rs  general.rs  nudge.rs  number.rs  prelude.rs  regex.rs  shrink.rs  skeptic.rs  string.rs
tests/common/: mod.rs
