[package]
name = "checkito"
version = "3.2.5"
authors = ["Magicolo <magicololand@gmail.com>"]
edition = "2021"
readme = "README.md"
documentation = "https://docs.rs/checkito/latest/checkito/"
description = "A safe, efficient and simple QuickCheck-inspired library to generate shrinkable random data mainly oriented towards generative/property/exploratory testing."
license = "MIT"
repository = "https://github.com/Magicolo/checkito"
keywords = ["property", "testing", "quickcheck", "fuzz", "hypothesis"]
categories = ["development-tools::testing"]
rust-version = "1.70"

[badges]
github = { repository = "Magicolo/checkito", workflow = "test" }

[features]
default = ["check", "regex", "constant", "asynchronous"]
check = ["checkito_macro/check"]
regex = ["regex-syntax/unicode", "checkito_macro/regex"]
constant = ["checkito_macro/constant"]
asynchronous = ["futures-lite", "checkito_macro/asynchronous"]
parallel = ["rayon", "checkito_macro/parallel"]

[dependencies]
orn = "0.6.1"
fastrand = "2.3.0"
ref-cast = "1.0.24"
rustversion = "1.0.21"
# TODO: Probably add `no-default-features`.
futures-lite = { version = "2.6.0", default-features = false, optional = true }
rayon = { version = "*", default-features = false, optional = true }
checkito_macro = { version = "0.5.0", path = "checkito_macro", default-features = false, optional = true }
regex-syntax = { version = "0.8.5", default-features = false, optional = true }

[dev-dependencies]
regex = "1.11.0"
# TODO: Probably remove this.
smol = "2.0.2"
