[workspace]
resolver = "2"
members = ["checkito", "checkito_macro"]
default-members = ["checkito"]

[workspace.package]
authors = ["Magicolo <magicololand@gmail.com>"]
edition = "2021"
readme = "README.md"
documentation = "https://docs.rs/checkito/latest/checkito/"
license = "MIT"
repository = "https://github.com/Magicolo/checkito"
keywords = ["property", "testing", "quickcheck", "fuzz", "hypothesis"]
categories = ["development-tools::testing"]
rust-version = "1.83"

[workspace.dependencies]
regex-syntax = { version = "0.8", default-features = false }
