[package]
name = "checkito"
version = "3.2.5"
authors = ["Magicolo <magicololand@gmail.com>"]
edition = "2021"
readme = "README.md"
documentation = "https://docs.rs/checkito/latest/checkito/"
description = "A safe, efficient and simple QuickCheck-inspired library to generate shrinkable random data mainly oriented towards generative/property/exploratory testing."
license = "MIT"
repository = "https://github.com/Magicolo/checkito"
keywords = ["property", "testing", "quickcheck", "fuzz", "hypothesis"]
categories = ["development-tools::testing"]
rust-version = "1.70"

[badges]
github = { repository = "Magicolo/checkito", workflow = "test" }

[features]
default = ["check", "regex", "constant", "asynchronous", "parallel"]
check = ["checkito_macro/check"]
regex = ["regex-syntax/unicode", "checkito_macro/regex"]
constant = ["checkito_macro/constant"]
asynchronous = ["futures-lite/std", "checkito_macro/asynchronous"]
parallel = [
    "rayon",
    "async-channel",
    "async-task",
    "orn/rayon",
    "checkito_macro/parallel",
]

[dependencies]
async-channel = { version = "2.5.0", optional = true }
async-task = { version = "4.7.1", optional = true }
checkito_macro = { version = "0.5.0", path = "../checkito_macro", default-features = false, optional = true }
fastrand = "2.3.0"
futures-lite = { version = "2.6.0", default-features = false, optional = true }
orn = { version = "0.7.0" }
rayon = { version = "1.10.0", optional = true }
ref-cast = "1.0.24"
regex-syntax = { version = "0.8.5", default-features = false, optional = true }
rustversion = "1.0.21"

[dev-dependencies]
regex = { version = "1.11.0", default-features = false }
