[package]
name = "checkito"
version = "3.2.5"
description = "A safe, efficient and simple QuickCheck-inspired library to generate shrinkable random data mainly oriented towards generative/property/exploratory testing."
documentation = "https://docs.rs/checkito/latest/checkito/"
authors = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
rust-version = { workspace = true }

[badges]
github = { repository = "Magicolo/checkito", workflow = "test" }

[features]
default = ["check", "regex", "constant", "asynchronous"]
check = ["checkito_macro/check"]
regex = ["regex-syntax/unicode", "checkito_macro/regex"]
constant = ["checkito_macro/constant"]
asynchronous = ["futures-lite/std", "checkito_macro/asynchronous"]

[dependencies]
checkito_macro = { version = "0.5.0", path = "../checkito_macro", default-features = false, optional = true }
fastrand = "2.3.0"
futures-lite = { version = "2.6.1", default-features = false, optional = true }
orn = { version = "0.8.2", default-features = false, features = [
    "or16",
    "iter",
] }
pin-project-lite = "0.2.16"
ref-cast = "1.0.25"
regex-syntax = { workspace = true, optional = true }
rustversion = "1.0.22"

[dev-dependencies]
regex = { version = "1.12.3", default-features = false }
