[package]
name = "checkito"
version = "4.0.5"
description = "A safe, efficient and simple QuickCheck-inspired library to generate shrinkable random data mainly oriented towards generative/property/exploratory testing."
documentation = "https://docs.rs/checkito/latest/checkito/"
readme = "README.md"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
rust-version = { workspace = true }

[badges]
github = { repository = "Magicolo/checkito", workflow = "test" }

[features]
default = ["check", "regex", "constant", "asynchronous"]
check = ["checkito_macro/check"]
regex = ["regex-syntax/unicode", "checkito_macro/regex"]
constant = ["checkito_macro/constant"]
asynchronous = ["futures-lite/std", "checkito_macro/asynchronous"]

[dependencies]
checkito_macro = { version = "0.5.5", path = "../checkito_macro", default-features = false, optional = true }
fastrand = "2.3"
futures-lite = { version = "2.6", default-features = false, optional = true }
orn = { version = "1.0", default-features = false, features = [
    "or16",
    "iter",
] }
pin-project-lite = "0.2"
ref-cast = "1.0"
regex-syntax = { workspace = true, optional = true }

[dev-dependencies]
regex = { version = "1.12", default-features = false }
