[package]
name = "checkito_macro"
version = "0.5.0"
authors = ["Magicolo <magicololand@gmail.com>"]
edition = "2021"
documentation = "https://docs.rs/checkito_macro/latest/checkito_macro/"
description = "A set of macros to accompany the `checkito` crate."
license = "MIT"
repository = "https://github.com/Magicolo/checkito/checkito_macro"
keywords = ["property", "testing", "quickcheck", "fuzz", "hypothesis"]
categories = ["development-tools::testing"]
rust-version = "1.65.0"

[lib]
proc-macro = true

[features]
default = ["regex", "check", "constant"]
regex = ["regex-syntax/unicode"]
check = []
constant = []
parallel = []
asynchronous = []

[dependencies]
syn = { version = "2.0.96", features = [
    "proc-macro",
    "parsing",
    "full",
    "printing",
], default-features = false }
quote = { version = "1.0.38", default-features = false }
regex-syntax = { version = "0.8.5", default-features = false, optional = true }
