[package]
name = "checkito_macro"
version = "0.5.0"
authors = ["Magicolo <magicololand@gmail.com>"]
edition = "2021"
documentation = "https://docs.rs/checkito_macro/latest/checkito_macro/"
description = "A set of macros to accompany the `checkito` crate."
license = "MIT"
repository = "https://github.com/Magicolo/checkito"
keywords = ["property", "testing", "quickcheck", "fuzz", "hypothesis"]
categories = ["development-tools::testing"]
rust-version = "1.83"

[lib]
proc-macro = true

[features]
default = []
regex = ["regex-syntax/unicode"]
check = []
constant = []
asynchronous = []

[dependencies]
syn = { version = "2.0.115", features = [
    "proc-macro",
    "parsing",
    "full",
    "printing",
], default-features = false }
quote = { version = "1.0.44", default-features = false }
regex-syntax = { version = "0.8.9", default-features = false, optional = true }
