[package]
name = "checkito_macro"
version = "0.5.4"
documentation = "https://docs.rs/checkito_macro/latest/checkito_macro/"
description = "A set of macros to accompany the `checkito` crate."
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
rust-version = { workspace = true }

[lib]
proc-macro = true

[features]
default = []
regex = ["regex-syntax/unicode"]
check = []
constant = []
asynchronous = []

[dependencies]
quote = { version = "1.0", default-features = false }
regex-syntax = { workspace = true, optional = true }
syn = { version = "2.0", features = [
    "proc-macro",
    "parsing",
    "full",
    "printing",
], default-features = false }
